codigo/gen/tightnyParser.py
# Generated from tightny.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class tightnyParser ( Parser ):

    grammarFileName = "tightny.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'const'", "'fun'", "'if'", "'then'", 
                     "'elif'", "'else'", "'end'", "'while'", "'do'", "'for'", 
                     "'next'", "'break'", "'continue'", "'switch'", "'case'", 
                     "'return'", "'struct'", "'enum'", "'and'", "'or'", 
                     "'not'", "'b1'", "<INVALID>", "<INVALID>", "'='", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", 
                     "'~'", "'<<'", "'>>'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "':'", "','", "'.'", "'...'" ]

    symbolicNames = [ "<INVALID>", "VAR", "CONST", "FUN", "IF", "THEN", 
                      "ELIF", "ELSE", "END", "WHILE", "DO", "FOR", "NEXT", 
                      "BREAK", "CONTINUE", "SWITCH", "CASE", "RETURN", "STRUCT", 
                      "ENUM", "AND", "OR", "NOT", "B1_TYPE", "U_TYPE", "I_TYPE", 
                      "ASSIGN", "COMPOUND_ASSIGN", "PLUS", "MINUS", "STAR", 
                      "SLASH", "PERCENT", "AMP", "PIPE", "CARET", "TILDE", 
                      "LSHIFT", "RSHIFT", "EQ", "NEQ", "LT", "GT", "LE", 
                      "GE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "COLON", "COMMA", "DOT", "ELLIPSIS", "AT_ID", 
                      "ID", "HEX_LIT", "BIN_LIT", "INT_LIT", "CHAR_LIT", 
                      "STRING_LIT", "COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_topLevelItem = 1
    RULE_varDecl = 2
    RULE_constDecl = 3
    RULE_funDecl = 4
    RULE_paramList = 5
    RULE_parameter = 6
    RULE_structDecl = 7
    RULE_enumDecl = 8
    RULE_block = 9
    RULE_statement = 10
    RULE_assignment = 11
    RULE_ifStmt = 12
    RULE_whileStmt = 13
    RULE_forStmt = 14
    RULE_switchStmt = 15
    RULE_caseStmt = 16
    RULE_returnStmt = 17
    RULE_breakStmt = 18
    RULE_continueStmt = 19
    RULE_typeSpec = 20
    RULE_expression = 21
    RULE_primary = 22
    RULE_argument = 23
    RULE_structFieldInit = 24
    RULE_directiveCall = 25
    RULE_literal = 26

    ruleNames =  [ "program", "topLevelItem", "varDecl", "constDecl", "funDecl", 
                   "paramList", "parameter", "structDecl", "enumDecl", "block", 
                   "statement", "assignment", "ifStmt", "whileStmt", "forStmt", 
                   "switchStmt", "caseStmt", "returnStmt", "breakStmt", 
                   "continueStmt", "typeSpec", "expression", "primary", 
                   "argument", "structFieldInit", "directiveCall", "literal" ]

    EOF = Token.EOF
    VAR=1
    CONST=2
    FUN=3
    IF=4
    THEN=5
    ELIF=6
    ELSE=7
    END=8
    WHILE=9
    DO=10
    FOR=11
    NEXT=12
    BREAK=13
    CONTINUE=14
    SWITCH=15
    CASE=16
    RETURN=17
    STRUCT=18
    ENUM=19
    AND=20
    OR=21
    NOT=22
    B1_TYPE=23
    U_TYPE=24
    I_TYPE=25
    ASSIGN=26
    COMPOUND_ASSIGN=27
    PLUS=28
    MINUS=29
    STAR=30
    SLASH=31
    PERCENT=32
    AMP=33
    PIPE=34
    CARET=35
    TILDE=36
    LSHIFT=37
    RSHIFT=38
    EQ=39
    NEQ=40
    LT=41
    GT=42
    LE=43
    GE=44
    LPAREN=45
    RPAREN=46
    LBRACE=47
    RBRACE=48
    LBRACKET=49
    RBRACKET=50
    COLON=51
    COMMA=52
    DOT=53
    ELLIPSIS=54
    AT_ID=55
    ID=56
    HEX_LIT=57
    BIN_LIT=58
    INT_LIT=59
    CHAR_LIT=60
    STRING_LIT=61
    COMMENT=62
    BLOCK_COMMENT=63
    WS=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(tightnyParser.EOF, 0)

        def topLevelItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tightnyParser.TopLevelItemContext)
            else:
                return self.getTypedRuleContext(tightnyParser.TopLevelItemContext,i)


        def getRuleIndex(self):
            return tightnyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = tightnyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 36028797019750414) != 0):
                self.state = 54
                self.topLevelItem()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(tightnyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def directiveCall(self):
            return self.getTypedRuleContext(tightnyParser.DirectiveCallContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(tightnyParser.VarDeclContext,0)


        def constDecl(self):
            return self.getTypedRuleContext(tightnyParser.ConstDeclContext,0)


        def funDecl(self):
            return self.getTypedRuleContext(tightnyParser.FunDeclContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(tightnyParser.StructDeclContext,0)


        def enumDecl(self):
            return self.getTypedRuleContext(tightnyParser.EnumDeclContext,0)


        def getRuleIndex(self):
            return tightnyParser.RULE_topLevelItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelItem" ):
                listener.enterTopLevelItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelItem" ):
                listener.exitTopLevelItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelItem" ):
                return visitor.visitTopLevelItem(self)
            else:
                return visitor.visitChildren(self)




    def topLevelItem(self):

        localctx = tightnyParser.TopLevelItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelItem)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [55]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.directiveCall()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.varDecl()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.constDecl()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.funDecl()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.structDecl()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 6)
                self.state = 67
                self.enumDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(tightnyParser.VAR, 0)

        def ID(self):
            return self.getToken(tightnyParser.ID, 0)

        def COLON(self):
            return self.getToken(tightnyParser.COLON, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(tightnyParser.TypeSpecContext,0)


        def ASSIGN(self):
            return self.getToken(tightnyParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(tightnyParser.ExpressionContext,0)


        def getRuleIndex(self):
            return tightnyParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = tightnyParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(tightnyParser.VAR)
            self.state = 71
            self.match(tightnyParser.ID)
            self.state = 72
            self.match(tightnyParser.COLON)
            self.state = 73
            self.typeSpec()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 74
                self.match(tightnyParser.ASSIGN)
                self.state = 75
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(tightnyParser.CONST, 0)

        def ID(self):
            return self.getToken(tightnyParser.ID, 0)

        def COLON(self):
            return self.getToken(tightnyParser.COLON, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(tightnyParser.TypeSpecContext,0)


        def ASSIGN(self):
            return self.getToken(tightnyParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(tightnyParser.ExpressionContext,0)


        def getRuleIndex(self):
            return tightnyParser.RULE_constDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDecl" ):
                listener.enterConstDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDecl" ):
                listener.exitConstDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):

        localctx = tightnyParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(tightnyParser.CONST)
            self.state = 79
            self.match(tightnyParser.ID)
            self.state = 80
            self.match(tightnyParser.COLON)
            self.state = 81
            self.typeSpec()
            self.state = 82
            self.match(tightnyParser.ASSIGN)
            self.state = 83
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN(self):
            return self.getToken(tightnyParser.FUN, 0)

        def LPAREN(self):
            return self.getToken(tightnyParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(tightnyParser.RPAREN, 0)

        def ASSIGN(self):
            return self.getToken(tightnyParser.ASSIGN, 0)

        def block(self):
            return self.getTypedRuleContext(tightnyParser.BlockContext,0)


        def END(self):
            return self.getToken(tightnyParser.END, 0)

        def ID(self):
            return self.getToken(tightnyParser.ID, 0)

        def AT_ID(self):
            return self.getToken(tightnyParser.AT_ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(tightnyParser.ParamListContext,0)


        def COLON(self):
            return self.getToken(tightnyParser.COLON, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(tightnyParser.TypeSpecContext,0)


        def getRuleIndex(self):
            return tightnyParser.RULE_funDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDecl" ):
                listener.enterFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDecl" ):
                listener.exitFunDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunDecl" ):
                return visitor.visitFunDecl(self)
            else:
                return visitor.visitChildren(self)




    def funDecl(self):

        localctx = tightnyParser.FunDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(tightnyParser.FUN)
            self.state = 86
            _la = self._input.LA(1)
            if not(_la==55 or _la==56):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 87
            self.match(tightnyParser.LPAREN)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 72057594037927942) != 0):
                self.state = 88
                self.paramList()


            self.state = 91
            self.match(tightnyParser.RPAREN)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==51:
                self.state = 92
                self.match(tightnyParser.COLON)
                self.state = 93
                self.typeSpec()


            self.state = 96
            self.match(tightnyParser.ASSIGN)
            self.state = 97
            self.block()
            self.state = 98
            self.match(tightnyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tightnyParser.ParameterContext)
            else:
                return self.getTypedRuleContext(tightnyParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(tightnyParser.COMMA)
            else:
                return self.getToken(tightnyParser.COMMA, i)

        def getRuleIndex(self):
            return tightnyParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = tightnyParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.parameter()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==52:
                self.state = 101
                self.match(tightnyParser.COMMA)
                self.state = 102
                self.parameter()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(tightnyParser.ID, 0)

        def COLON(self):
            return self.getToken(tightnyParser.COLON, 0)

        def typeSpec(self):
            return self.getTypedRuleContext(tightnyParser.TypeSpecContext,0)


        def VAR(self):
            return self.getToken(tightnyParser.VAR, 0)

        def CONST(self):
            return self.getToken(tightnyParser.CONST, 0)

        def getRuleIndex(self):
            return tightnyParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = tightnyParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1 or _la==2:
                self.state = 108
                _la = self._input.LA(1)
                if not(_la==1 or _la==2):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 111
            self.match(tightnyParser.ID)
            self.state = 112
            self.match(tightnyParser.COLON)
            self.state = 113
            self.typeSpec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(tightnyParser.STRUCT, 0)

        def ID(self):
            return self.getToken(tightnyParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(tightnyParser.ASSIGN, 0)

        def END(self):
            return self.getToken(tightnyParser.END, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tightnyParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(tightnyParser.VarDeclContext,i)


        def constDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tightnyParser.ConstDeclContext)
            else:
                return self.getTypedRuleContext(tightnyParser.ConstDeclContext,i)


        def getRuleIndex(self):
            return tightnyParser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDecl" ):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)




    def structDecl(self):

        localctx = tightnyParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(tightnyParser.STRUCT)
            self.state = 116
            self.match(tightnyParser.ID)
            self.state = 117
            self.match(tightnyParser.ASSIGN)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==2:
                self.state = 120
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 118
                    self.varDecl()
                    pass
                elif token in [2]:
                    self.state = 119
                    self.constDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(tightnyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(tightnyParser.ENUM, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(tightnyParser.ID)
            else:
                return self.getToken(tightnyParser.ID, i)

        def ASSIGN(self):
            return self.getToken(tightnyParser.ASSIGN, 0)

        def END(self):
            return self.getToken(tightnyParser.END, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(tightnyParser.COMMA)
            else:
                return self.getToken(tightnyParser.COMMA, i)

        def getRuleIndex(self):
            return tightnyParser.RULE_enumDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumDecl" ):
                listener.enterEnumDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumDecl" ):
                listener.exitEnumDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumDecl" ):
                return visitor.visitEnumDecl(self)
            else:
                return visitor.visitChildren(self)




    def enumDecl(self):

        localctx = tightnyParser.EnumDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enumDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(tightnyParser.ENUM)
            self.state = 128
            self.match(tightnyParser.ID)
            self.state = 129
            self.match(tightnyParser.ASSIGN)
            self.state = 130
            self.match(tightnyParser.ID)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==52:
                self.state = 131
                self.match(tightnyParser.COMMA)
                self.state = 132
                self.match(tightnyParser.ID)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(tightnyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tightnyParser.StatementContext)
            else:
                return self.getTypedRuleContext(tightnyParser.StatementContext,i)


        def ELLIPSIS(self):
            return self.getToken(tightnyParser.ELLIPSIS, 0)

        def getRuleIndex(self):
            return tightnyParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = tightnyParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 4, 9, 11, 13, 14, 15, 17, 22, 29, 36, 45, 47, 49, 55, 56, 57, 58, 59, 60, 61]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 140
                    self.statement()
                    self.state = 143 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4576396162483022358) != 0)):
                        break

                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(tightnyParser.ELLIPSIS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(tightnyParser.VarDeclContext,0)


        def constDecl(self):
            return self.getTypedRuleContext(tightnyParser.ConstDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(tightnyParser.AssignmentContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(tightnyParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(tightnyParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(tightnyParser.ForStmtContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(tightnyParser.SwitchStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(tightnyParser.ReturnStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(tightnyParser.BreakStmtContext,0)

